Fix post grid spacings for title/content #247236427962529

--- a/public/sources/elements/postsGridItemPostDescription/styles.css
+++ b/public/sources/elements/postsGridItemPostDescription/styles.css
@@ -71,6 +71,15 @@
   text-align: left;
 }
 
+.vce-post-description--content.vce-post-description-content--has-excerpt p:last-child,
+.vce-post-description--content.vce-post-description-content--has-title:not(.vce-post-description-content--has-excerpt) h3 {
+  margin: 0;
+}
+
+.vce-post-description--content.vce-post-description-content--has-title.vce-post-description-content--has-excerpt h3 {
+  margin-bottom: 10px;
+}
+
 .vce-post-description--has-background .vce-post-description--content {
   padding-top: 20px;
 }
@@ -83,8 +92,7 @@
   font-size: 18px;
   font-weight: 500;
   padding: 0;
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin: 0;
   line-height: 1.1;
   text-transform: uppercase;
 }
